<resources>
    <string name="app_name">GitHub Finder</string>
    <string name="app_title">GitHub Finder</string>
    <string name="item_user">Item User</string>
    <string name="search_me_text">Find me! @fiknaufalh</string>
    <string name="search_result_text">%d Results, Showing %d Results</string>
    <string name="search_placeholder">Find username</string>
    <string name="back">Back</string>
    <string name="welcome_text">Welcome!</string>
    <string name="passing_query">q</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="member_since">Member since %s</string>
    <string name="undefinedName">Unknown Name</string>
    <string name="follow_result">Showing %d Results</string>
    <string name="empty_list">Empty List</string>
    <string name="tab_desc">Tab of Follower and Following</string>
    <string name="item_username">User Name</string>
    <string name="item_fullname">Full Name</string>
    <string name="item_email">user@example.com</string>
    <string name="item_since">Member since 1st January 1970</string>
    <string name="splash_description">Welcome to GitHub Finder!</string>
    <string name="tab_text">%d %s</string>
    <string name="favorite_list_icon">Favorite List Icon</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="fav_list_title">Favorite List</string>
    <string name="favorite_mark">Favorite Mark</string>
    <string name="switch_mode_icon">Switch Mode Icon</string>
    <string name="dark">dark</string>
    <string name="light">light</string>
</resources>
